lexer/src/snapshots/lexer__lexer__tests__changing_tokens.snap
---
source: lexer/src/lexer.rs
expression: "check(\"<<  >>\")"
---
[
    MoveLeft(
        2,
    ),
    MoveRight(
        2,
    ),
]
