lexer/src/snapshots/lexer__lexer__tests__ignoring_non_tokens.snap
---
source: lexer/src/lexer.rs
expression: "check(\" _*  <<random_!?anything!!>!!>\")"
---
[
    MoveLeft(
        2,
    ),
    MoveRight(
        2,
    ),
]
