lexer/src/snapshots/lexer__lexer__tests__pretty_hello_world.snap
---
source: lexer/src/lexer.rs
expression: "check(include_str!(\"../../samples/hello_world_pretty.bf\"))"
---
[
    JumpIfZero(
        1,
    ),
    Write(
        1,
    ),
    JumpIfZero(
        1,
    ),
    Write(
        1,
    ),
    JumpUnlessZero(
        1,
    ),
    Read(
        1,
    ),
    Write(
        2,
    ),
    Read(
        3,
    ),
    Increment(
        1,
    ),
    Read(
        1,
    ),
    Decrement(
        1,
    ),
    Read(
        1,
    ),
    MoveLeft(
        1,
    ),
    MoveRight(
        1,
    ),
    Read(
        1,
    ),
    JumpIfZero(
        1,
    ),
    JumpUnlessZero(
        1,
    ),
    Write(
        2,
    ),
    JumpUnlessZero(
        1,
    ),
    Increment(
        8,
    ),
    JumpIfZero(
        1,
    ),
    MoveRight(
        1,
    ),
    Increment(
        4,
    ),
    JumpIfZero(
        1,
    ),
    MoveRight(
        1,
    ),
    Increment(
        2,
    ),
    MoveRight(
        1,
    ),
    Increment(
        3,
    ),
    MoveRight(
        1,
    ),
    Increment(
        3,
    ),
    MoveRight(
        1,
    ),
    Increment(
        1,
    ),
    MoveLeft(
        4,
    ),
    Decrement(
        1,
    ),
    JumpUnlessZero(
        1,
    ),
    MoveRight(
        1,
    ),
    Increment(
        1,
    ),
    MoveRight(
        1,
    ),
    Increment(
        1,
    ),
    MoveRight(
        1,
    ),
    Decrement(
        1,
    ),
    MoveRight(
        2,
    ),
    Increment(
        1,
    ),
    JumpIfZero(
        1,
    ),
    MoveLeft(
        1,
    ),
    JumpUnlessZero(
        1,
    ),
    MoveLeft(
        1,
    ),
    Decrement(
        1,
    ),
    JumpUnlessZero(
        1,
    ),
    MoveRight(
        2,
    ),
    Write(
        1,
    ),
    MoveRight(
        1,
    ),
    Decrement(
        3,
    ),
    Write(
        1,
    ),
    Increment(
        7,
    ),
    Write(
        2,
    ),
    Increment(
        3,
    ),
    Write(
        1,
    ),
    MoveRight(
        2,
    ),
    Write(
        1,
    ),
    MoveLeft(
        1,
    ),
    Decrement(
        1,
    ),
    Write(
        1,
    ),
    MoveLeft(
        1,
    ),
    Write(
        1,
    ),
    Increment(
        3,
    ),
    Write(
        1,
    ),
    Decrement(
        6,
    ),
    Write(
        1,
    ),
    Decrement(
        8,
    ),
    Write(
        1,
    ),
    MoveRight(
        2,
    ),
    Increment(
        1,
    ),
    Write(
        1,
    ),
    MoveRight(
        1,
    ),
    Increment(
        2,
    ),
    Write(
        1,
    ),
]
