lexer/src/snapshots/lexer__lexer__tests__single_spaced_token.snap
---
source: lexer/src/lexer.rs
expression: "check(\"<<       <<\")"
---
[
    MoveLeft(
        4,
    ),
]
